# Oracle

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  config.toml
.cargo/: config.toml
docs/: DEVELOPMENT_PLAN.md  QUICKSTART.md  WHITEPAPER.md
src/: config.rs  lib.rs  main.rs  types.rs
src/backtest/: calibration.rs  mod.rs  runner.rs
src/dashboard/: mod.rs  routes.rs
src/dashboard/templates/: index.html
src/data/: economics.rs  mod.rs  news.rs  sports.rs  weather.rs
src/engine/: accountant.rs  auto_exit.rs  enricher.rs  executor.rs  mod.rs  scanner.rs
src/llm/: anthropic.rs  grok.rs  mod.rs  openai.rs  openrouter.rs
src/storage/: mod.rs  schema.sql
src/strategy/: edge.rs  kelly.rs  mod.rs  risk.rs
tests/integration/: mock_platform.rs  simulation.rs
tests/unit/: edge_tests.rs  kelly_tests.rs
