[package]
name = "oracle"
version = "0.1.0"
edition = "2021"
description = "ORACLE: Autonomous Prediction Market AI Agent"
authors = ["Pierre"]
license = "Proprietary"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
dotenv = "0.15"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.13"
